--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,21 @@ output.txt
 coverage.xml
 /coverage
 .phpunit.result.cache
+public/vendor/telescope/mix-manifest.json
+public/vendor/telescope/favicon.ico
+public/vendor/telescope/app-dark.css
+public/js/frontend.js
+.env.example
+.gitignore
+composer.lock
+app/Providers/TelescopeServiceProvider.php
+config/app.php
+config/telescope.php
+public/mix-manifest.json
+public/css/backend.css
+public/css/frontend.css
+public/js/backend.js
+public/js/work.js
+public/vendor/telescope/app.css
+/composer.lock
+config/app.php
